--- a/main-themes/purple/style.css
+++ b/main-themes/purple/style.css
@@ -31,6 +31,7 @@ body {
   margin-left: 4rem;
   margin-top: -1rem;
   flex-direction: column;
+  background: transparent;
 }
 .maincard {
   display: flex;
